# chessengine

./: .gitattributes  .gitignore  README.md  StatusOfMethods.txt  chatGPTcomments.txt  chess.py
ai/: RustServer.bat  app.py  batch_0.pt  chess.py  data_collection.py  deletedcode.txt  extract_carlsen_data.py  extract_sygyzy_data.py  fd.py  genOpenTree.py  invite.ics  main.txt  model.onnx  model_eval_test.py  nn1.py  nn2.py  nn3.py  nn4.py  nn6.py  nn7.py  onx-conversion.py  pre-training-2.py  pymongo_get_database.py  reload_models.py  resave.py  scriptedmodel2resave.py  scriptedmodel3resave.py  scriptedmodel4resave.py  scriptedmodel5save.py  scriptedmodel6save.py  simplemodel.py  test.py  validate_rust_generated_moves.py
chess_rust/: Cargo.toml  Dockerfile  build.rs  test.py
chess_rust/newenv/: pyvenv.cfg
chess_rust/src/: ai_functions.rs  base_functions.rs  base_move_functions.rs  chess_cnn_checkpoint_epoch_15.pt  chess_cnn_model6_scripted.pt  chess_cnn_model_final_3x3x3x3_f16.pt  chess_cnn_model_final_3xpool2xconv_f16.pt  chess_cnn_model_final_f16.pt  chess_cnn_model_final_f16_3_convs.pt  deadcodethatimightneedlater.txt  main  main.rs  model3_scripted.pt  model4_scripted.pt  model5_scripted.pt  model6_scripted.pt  mongo_repo.rs  opening_book.json  search_functions.rs  server_processing.rs  simple_model_scripted.pt  test_board.rs  types.rs  upper_move_function_helpers.rs  upper_move_functions.rs
chess_rust/src/tests/: base_move_functions_test.rs
client/: README.md  index.html  package-lock.json  package.json
next-js-fe/: difficulty-selection.tsx  index.tsx  (+1 more)
(+15 files in other folders)
