[package]
name = "chess_rust"
version = "0.1.0"
edition = "2021"

rustflags = ["-C", "link-arg=-stdlib=libc++"]

[dependencies]
rayon = "1.5"
tch = "0.18.0"
half = "1.7.1"
rand = "0.8.5"
actix-web = { version = "4", features = ["default"] }
actix-cors = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bson = "2.3.0"
